# cpu_monitor_ros2

./: CMakeLists.txt  README.md  package.xml
msg/: X86CpuTemperature.msg
src/: cpu_monitor_node.cpp
